--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,15 @@
+:root {
+  --brand-color-black: #212121;
+  --brand-color-blue: #2196f3;
+  --brand-color-gray: #757575;
+  --brand-color-white: white;
+  --brand-background-black: #2f303a;
+  --brand-color-dark-blue: #188ce8;
+  --brand-background-white: #f5f4fa;
+}
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #212121;
+  font-family: Roboto, sans-serif;
+  color: var(--brand-color-black);
 }
 ul {
   list-style: none;
@@ -11,86 +19,144 @@ ul {
   font-size: 26px;
   font-weight: 700;
   line-height: 1.173;
+  color: var(--brand-color-black);
+  text-decoration: none;
+  letter-spacing: 0.03em;
 }
+.logo:focus,
 .logo:hover {
-  color: #212121;
+  color: var(--brand-color-black);
 }
 .logo-web {
-  color: #2196f3;
+  color: var(--brand-color-blue);
 }
 .logo-bot {
-  color: white;
+  color: var(--brand-color-white);
   text-decoration: none;
   font-family: raleway, sans-serif;
   font-size: 26px;
 }
-header a {
-  color: #212121;
+.nav-link {
+  color: var(--brand-color-black);
   text-decoration: none;
   font-size: 14px;
-  line-height: 2;
+  line-height: 1.172;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
+.nav-link:focus,
+.nav-link:hover {
+  color: var(--brand-color-blue);
 }
 
-header a:hover {
-  color: #2196f3;
+.contact {
+  color: var(--brand-color-gray);
+}
+.hat {
+  background-color: var(--brand-background-black);
 }
 
-h1 {
+.hat-header {
+  color: var(--brand-color-white);
   font-size: 44px;
   text-transform: uppercase;
   line-height: 1.363;
+  letter-spacing: 0.06em;
 }
-h2 {
+.header-second {
   font-size: 36px;
   line-height: 1.171;
+  letter-spacing: 0.03em;
 }
 .place-order {
-  color: white;
+  color: var(--brand-color-white);
   font-size: 16px;
-  background-color: #2196f3;
+  background-color: var(--brand-color-blue);
   cursor: pointer;
   line-height: 1.875;
+  letter-spacing: 0.06em;
 }
-.benefits h3 {
+.place-order:focus,
+.place-order:hover {
+  background-color: var(--brand-color-dark-blue);
+}
+.benefits-header {
   font-size: 14px;
   text-transform: uppercase;
   line-height: 1.172;
+  letter-spacing: 0.03em;
 }
-.benefits p {
+.benefits-text {
   font-size: 14px;
-  color: #757575;
+  color: var(--brand-color-gray);
   line-height: 1.171;
+  letter-spacing: 0.03em;
 }
-.team h3 {
+
+.team-section {
+  background-color: var(--brand-background-white);
+}
+.team-header {
   font-size: 16px;
   line-height: 1.178;
+  letter-spacing: 0.03em;
 }
-.team p {
+.team-text {
   font-size: 16px;
   line-height: 1.178;
+  letter-spacing: 0.03em;
+}
+.team-description {
+  background-color: var(--brand-color-white);
 }
 footer {
-  background-color: #2f303a;
+  background-color: var(--brand-background-black);
 }
-address a {
+.address-link {
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   line-height: 1.714;
+  font-style: normal;
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
-address a:hover {
-  color: white;
+.adres {
+  color: var(--brand-color-white);
 }
-.filter button {
+.address-link:focus,
+.address-link:hover {
+  color: var(--brand-color-blue);
+}
+.adres:focus,
+.adres:hover {
+  color: var(--brand-color-white);
+}
+
+.filter-button {
   font-size: 16px;
   cursor: pointer;
   line-height: 1.625;
+  font-family: inherit;
+  color: var(--brand-color-black);
+  background-color: var(--brand-background-white);
+  font-family: inherit;
+  letter-spacing: 0.03em;
+  font-weight: 500;
 }
-.portfolio-works h2 {
+.filter-button:focus,
+.filter-button:hover {
+  color: var(--brand-color-white);
+  background-color: var(--brand-color-blue);
+}
+
+.portfolio-works-header {
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
 }
-.portfolio-works p {
+.portfolio-works-text {
   font-size: 16px;
-  color: #757575;
+  color: var(--brand-color-gray);
   line-height: 1.875;
+  letter-spacing: 0.03em;
 }
